fix: line-heights for enriched content were causing overlap

--- a/styles/init.sass
+++ b/styles/init.sass
@@ -140,6 +140,12 @@ body.game #gas-settings-submenu.app.window-app
   --tjs-select-transition-focus-visible: box-shadow 0.2s ease
   --tjs-select-width: auto
 
+  table.core-class-traits
+    th, td
+      vertical-align: top
+    td
+      p:has(a.content-link)
+        line-height: 1.5rem
   /* Option variables */
   --tjs-select-option-background: #23221d
   --tjs-select-option-color: #b5b3a4
